--- a/instagram/Xibs/HistoryTableCell.xib
+++ b/instagram/Xibs/HistoryTableCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,23 +17,62 @@
                 <rect key="frame" x="0.0" y="0.0" width="413" height="116"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MCE-Mp-99w" userLabel="name">
-                        <rect key="frame" x="185.66666666666666" y="47.666666666666664" width="42" height="20.999999999999993"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5es-Xw-csC" userLabel="main-stack">
+                        <rect key="frame" x="0.0" y="0.0" width="413" height="116"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EfD-GZ-O78" userLabel="left-view">
+                                <rect key="frame" x="0.0" y="0.0" width="206.66666666666666" height="116"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bd3-j3-dvl">
+                                        <rect key="frame" x="0.0" y="38" width="40" height="40"/>
+                                        <color key="backgroundColor" red="0.081787489354610443" green="0.33458065986633301" blue="0.27055603265762329" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="8Tp-Q5-bil"/>
+                                            <constraint firstAttribute="height" constant="40" id="rYE-Up-9sK"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="euw-K2-T7e">
+                                        <rect key="frame" x="40" y="38" width="166.66666666666666" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Gdm-2S-eeg"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0024556329459999998" green="0.55495256189999997" blue="0.52941159159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Bd3-j3-dvl" firstAttribute="leading" secondItem="EfD-GZ-O78" secondAttribute="leading" id="ZRY-dr-Bt9"/>
+                                    <constraint firstAttribute="trailing" secondItem="euw-K2-T7e" secondAttribute="trailing" id="fa5-8v-c0N"/>
+                                    <constraint firstItem="euw-K2-T7e" firstAttribute="leading" secondItem="Bd3-j3-dvl" secondAttribute="trailing" id="iJz-jY-Fcf"/>
+                                    <constraint firstItem="euw-K2-T7e" firstAttribute="centerY" secondItem="EfD-GZ-O78" secondAttribute="centerY" id="qZJ-Z8-S0G"/>
+                                    <constraint firstItem="Bd3-j3-dvl" firstAttribute="centerY" secondItem="EfD-GZ-O78" secondAttribute="centerY" id="qin-B0-ig3"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ECw-Z0-pW5" userLabel="right-stack">
+                                <rect key="frame" x="206.66666666666663" y="0.0" width="206.33333333333337" height="116"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.5038945776" green="0.3715792986" blue="0.55495256189999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="MCE-Mp-99w" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="3bk-xt-Ktu"/>
-                    <constraint firstItem="MCE-Mp-99w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4Oh-aG-0cz"/>
+                    <constraint firstItem="5es-Xw-csC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ZTE-rS-FFq"/>
+                    <constraint firstItem="5es-Xw-csC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="f5q-mT-LFz"/>
+                    <constraint firstAttribute="trailing" secondItem="5es-Xw-csC" secondAttribute="trailing" id="peV-ZQ-nRM"/>
+                    <constraint firstAttribute="bottom" secondItem="5es-Xw-csC" secondAttribute="bottom" id="y9b-KO-MAG"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <connections>
-                <outlet property="name" destination="MCE-Mp-99w" id="klR-2L-i91"/>
-            </connections>
             <point key="canvasLocation" x="84.732824427480907" y="14.084507042253522"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
