--- a/instagram/Xibs/HistoryTableCell.xib
+++ b/instagram/Xibs/HistoryTableCell.xib
@@ -4,75 +4,109 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryTableCell" rowHeight="116" id="KGk-i7-Jjw" customClass="HistoryTableCell" customModule="instagram" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="413" height="116"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryTableCell" rowHeight="186" id="KGk-i7-Jjw" customClass="HistoryTableCell" customModule="instagram" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="449" height="186"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="413" height="116"/>
+                <rect key="frame" x="0.0" y="0.0" width="449" height="186"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5es-Xw-csC" userLabel="main-stack">
-                        <rect key="frame" x="0.0" y="0.0" width="413" height="116"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lz6-lt-EVC">
+                        <rect key="frame" x="0.0" y="73" width="40" height="40"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EfD-GZ-O78" userLabel="left-view">
-                                <rect key="frame" x="0.0" y="0.0" width="206.66666666666666" height="116"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bd3-j3-dvl">
-                                        <rect key="frame" x="0.0" y="38" width="40" height="40"/>
-                                        <color key="backgroundColor" red="0.081787489354610443" green="0.33458065986633301" blue="0.27055603265762329" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="8Tp-Q5-bil"/>
-                                            <constraint firstAttribute="height" constant="40" id="rYE-Up-9sK"/>
-                                        </constraints>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="euw-K2-T7e">
-                                        <rect key="frame" x="40" y="38" width="166.66666666666666" height="40"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="Gdm-2S-eeg"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" red="0.0024556329459999998" green="0.55495256189999997" blue="0.52941159159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buy-ic" translatesAutoresizingMaskIntoConstraints="NO" id="YRX-4f-z3d">
+                                <rect key="frame" x="8" y="8" width="24" height="24"/>
                                 <constraints>
-                                    <constraint firstItem="Bd3-j3-dvl" firstAttribute="leading" secondItem="EfD-GZ-O78" secondAttribute="leading" id="ZRY-dr-Bt9"/>
-                                    <constraint firstAttribute="trailing" secondItem="euw-K2-T7e" secondAttribute="trailing" id="fa5-8v-c0N"/>
-                                    <constraint firstItem="euw-K2-T7e" firstAttribute="leading" secondItem="Bd3-j3-dvl" secondAttribute="trailing" id="iJz-jY-Fcf"/>
-                                    <constraint firstItem="euw-K2-T7e" firstAttribute="centerY" secondItem="EfD-GZ-O78" secondAttribute="centerY" id="qZJ-Z8-S0G"/>
-                                    <constraint firstItem="Bd3-j3-dvl" firstAttribute="centerY" secondItem="EfD-GZ-O78" secondAttribute="centerY" id="qin-B0-ig3"/>
+                                    <constraint firstAttribute="height" constant="24" id="enb-CQ-N3C"/>
+                                    <constraint firstAttribute="width" constant="24" id="xQl-LD-2MT"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ECw-Z0-pW5" userLabel="right-stack">
-                                <rect key="frame" x="206.66666666666663" y="0.0" width="206.33333333333337" height="116"/>
-                                <color key="backgroundColor" systemColor="systemBlueColor"/>
-                            </view>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.5038945776" green="0.3715792986" blue="0.55495256189999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="NC9-e8-bkb"/>
+                            <constraint firstAttribute="width" constant="40" id="Yxh-NT-oni"/>
+                            <constraint firstItem="YRX-4f-z3d" firstAttribute="centerX" secondItem="lz6-lt-EVC" secondAttribute="centerX" id="by7-gf-MPu"/>
+                            <constraint firstItem="YRX-4f-z3d" firstAttribute="centerY" secondItem="lz6-lt-EVC" secondAttribute="centerY" id="vJX-41-JPp"/>
+                        </constraints>
+                    </view>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="5SG-z6-tMR">
+                        <rect key="frame" x="299" y="16" width="150" height="154"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="110" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bd4-jU-20J">
+                                <rect key="frame" x="124.66666666666667" y="0.0" width="25.333333333333329" height="51.333333333333336"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.034 ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAD-vx-fSV">
+                                <rect key="frame" x="68.666666666666686" y="51.333333333333329" width="81.333333333333314" height="51.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6 jun,2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iY8-Cv-9Xa">
+                                <rect key="frame" x="68.333333333333314" y="102.66666666666667" width="81.666666666666686" height="51.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="5hu-6h-KTN"/>
+                        </constraints>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ejE-Ig-Cbv" userLabel="left-stack">
+                        <rect key="frame" x="52" y="72.666666666666671" width="112" height="40.666666666666671"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rf6-Xs-dNr">
+                                <rect key="frame" x="0.0" y="0.0" width="55" height="20.333333333333332"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="smart contract" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yb-M7-0FV">
+                                <rect key="frame" x="0.0" y="20.333333333333329" width="112" height="20.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="5es-Xw-csC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ZTE-rS-FFq"/>
-                    <constraint firstItem="5es-Xw-csC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="f5q-mT-LFz"/>
-                    <constraint firstAttribute="trailing" secondItem="5es-Xw-csC" secondAttribute="trailing" id="peV-ZQ-nRM"/>
-                    <constraint firstAttribute="bottom" secondItem="5es-Xw-csC" secondAttribute="bottom" id="y9b-KO-MAG"/>
+                    <constraint firstItem="lz6-lt-EVC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="3gm-fg-46t"/>
+                    <constraint firstItem="5SG-z6-tMR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="O2K-eg-WkY"/>
+                    <constraint firstAttribute="bottom" secondItem="5SG-z6-tMR" secondAttribute="bottom" constant="16" id="YQo-gx-57W"/>
+                    <constraint firstItem="ejE-Ig-Cbv" firstAttribute="centerY" secondItem="5SG-z6-tMR" secondAttribute="centerY" id="Ysf-zl-BYv"/>
+                    <constraint firstItem="5SG-z6-tMR" firstAttribute="centerY" secondItem="lz6-lt-EVC" secondAttribute="centerY" id="aDD-XL-9yw"/>
+                    <constraint firstItem="5SG-z6-tMR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="enS-jQ-Q1O"/>
+                    <constraint firstItem="lz6-lt-EVC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="iKG-Hy-a6F"/>
+                    <constraint firstAttribute="trailing" secondItem="5SG-z6-tMR" secondAttribute="trailing" id="tiP-IS-jAS"/>
+                    <constraint firstItem="ejE-Ig-Cbv" firstAttribute="leading" secondItem="lz6-lt-EVC" secondAttribute="trailing" constant="12" id="wRH-Vq-aG4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="84.732824427480907" y="14.084507042253522"/>
+            <connections>
+                <outlet property="amountLabel" destination="bd4-jU-20J" id="bbB-py-Mwe"/>
+                <outlet property="dateLabel" destination="iY8-Cv-9Xa" id="nwX-o5-irb"/>
+                <outlet property="descLabel" destination="2yb-M7-0FV" id="O83-HZ-ix3"/>
+                <outlet property="etherLabel" destination="jAD-vx-fSV" id="oGc-UM-PK4"/>
+                <outlet property="iconView" destination="lz6-lt-EVC" id="LdR-ES-m3f"/>
+                <outlet property="titleLabel" destination="rf6-Xs-dNr" id="7Ga-q2-nzU"/>
+            </connections>
+            <point key="canvasLocation" x="84.732824427480907" y="-37.323943661971832"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="buy-ic" width="24" height="24"/>
     </resources>
 </document>
