--- a/instagram/View/Storyboards/Base.lproj/Main.storyboard
+++ b/instagram/View/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Mep-Ye-p5I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Rwm-US-N93">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -29,6 +29,84 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JhT-a7-Jab" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-240" y="-520"/>
+        </scene>
+        <!--Login Controller-->
+        <scene sceneID="euV-V2-XSc">
+            <objects>
+                <viewController id="BPA-AU-K2w" customClass="LoginController" customModule="instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dkc-7c-hyW">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ig-ic" translatesAutoresizingMaskIntoConstraints="NO" id="LF0-MJ-rjB">
+                                <rect key="frame" x="99.666666666666686" y="225" width="194" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="194" id="1iV-cE-6XF"/>
+                                    <constraint firstAttribute="height" constant="50" id="kLk-1S-kLG"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQb-OR-YA9">
+                                <rect key="frame" x="32" y="341" width="329" height="52"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="Og1-lr-yBH"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="fb-ic" title="Continue with Facebook" imagePadding="7">
+                                    <color key="baseForegroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zvz-jx-WqJ">
+                                <rect key="frame" x="16" y="721" width="361" height="56"/>
+                                <color key="backgroundColor" red="0.094612918794155121" green="0.40151965618133545" blue="0.4449470043182373" alpha="0.99607849120000003" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="WRa-KX-nrF"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Click">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="onClick:" destination="BPA-AU-K2w" eventType="touchUpInside" id="9rN-TA-NYS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="PTc-Vm-iG7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LF0-MJ-rjB" firstAttribute="top" secondItem="dkc-7c-hyW" secondAttribute="topMargin" constant="122" id="0wB-zS-B8f"/>
+                            <constraint firstItem="LF0-MJ-rjB" firstAttribute="centerX" secondItem="dkc-7c-hyW" secondAttribute="centerX" id="12J-xC-cyL"/>
+                            <constraint firstItem="PTc-Vm-iG7" firstAttribute="bottom" secondItem="Zvz-jx-WqJ" secondAttribute="bottom" constant="40" id="3w9-0l-liy"/>
+                            <constraint firstItem="bQb-OR-YA9" firstAttribute="top" secondItem="LF0-MJ-rjB" secondAttribute="bottom" constant="66" id="OmO-ad-251"/>
+                            <constraint firstItem="bQb-OR-YA9" firstAttribute="leading" secondItem="dkc-7c-hyW" secondAttribute="leadingMargin" constant="16" id="f9j-yC-XZv"/>
+                            <constraint firstItem="PTc-Vm-iG7" firstAttribute="trailing" secondItem="Zvz-jx-WqJ" secondAttribute="trailing" constant="16" id="kSx-PR-7Li"/>
+                            <constraint firstItem="Zvz-jx-WqJ" firstAttribute="leading" secondItem="PTc-Vm-iG7" secondAttribute="leading" constant="16" id="luR-ms-Vhk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bQb-OR-YA9" secondAttribute="trailing" constant="16" id="zdd-Qi-JHB"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="D7j-69-ol9"/>
+                    <connections>
+                        <outlet property="continueFB" destination="bQb-OR-YA9" id="Wf3-DZ-TcK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6lp-s9-wUv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="686.25954198473278" y="-1997.1830985915494"/>
+        </scene>
+        <!--Register View Controller-->
+        <scene sceneID="KYU-5x-9y1">
+            <objects>
+                <viewController storyboardIdentifier="RegisterViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ypR-Qt-XKp" customClass="RegisterViewController" customModule="instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pEG-Ja-byY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="IPf-mA-c2g"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eLy-Hu-hbH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1360" y="-1997"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Qw2-OO-lMn">
@@ -536,19 +614,45 @@
             </objects>
             <point key="canvasLocation" x="1442" y="199"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ius-UX-gLv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Rwm-US-N93" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YkI-AL-v1X">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BPA-AU-K2w" kind="relationship" relationship="rootViewController" id="4wH-xU-W8Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dw8-j7-FsA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="21" y="-1997"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bell" catalog="system" width="125" height="128"/>
         <image name="buy-ic" width="24" height="24"/>
         <image name="camera" catalog="system" width="128" height="93"/>
         <image name="eye-ic" width="14.333333015441895" height="14"/>
+        <image name="fb-ic" width="32" height="32"/>
         <image name="globe" catalog="system" width="128" height="123"/>
         <image name="history-ic" width="18" height="18"/>
         <image name="homekit" catalog="system" width="128" height="104"/>
+        <image name="ig-ic" width="194" height="50"/>
         <image name="person" catalog="system" width="128" height="121"/>
         <image name="receive-ic" width="24" height="24"/>
         <image name="send-ic" width="24" height="24"/>
         <image name="swap-ic" width="24" height="24"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondarySystemGroupedBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
